--- a/contatti.css
+++ b/contatti.css
@@ -109,25 +109,13 @@
 }
 .contatti-banner {
   width: 100%;
+  border: 2px dashed rgba(120, 120, 120, 0.4);
   display: flex;
   padding: var(--dl-space-space-threeunits);
   align-items: center;
   padding-top: 48px;
   flex-direction: column;
   justify-content: space-between;
-}
-.contatti-text01 {
-  font-size: 3rem;
-  text-align: center;
-}
-.contatti-text02 {
-  max-width: var(--dl-size-size-maxwidth);
-  margin-top: var(--dl-space-space-twounits);
-  text-align: center;
-  margin-bottom: var(--dl-space-space-twounits);
-}
-.contatti-link {
-  text-decoration: underline;
 }
 .contatti-footer {
   width: 100%;
@@ -185,9 +173,6 @@
   .contatti-text {
     line-height: 30px;
   }
-  .contatti-text02 {
-    max-width: 100%;
-  }
   .contatti-footer {
     padding-top: var(--dl-space-space-fourunits);
     padding-left: var(--dl-space-space-oneandhalfunits);
@@ -238,10 +223,6 @@
     padding-left: var(--dl-space-space-twounits);
     padding-right: var(--dl-space-space-twounits);
   }
-  .contatti-text02 {
-    padding-left: var(--dl-space-space-unit);
-    padding-right: var(--dl-space-space-unit);
-  }
   .contatti-socials {
     display: flex;
   }
@@ -269,9 +250,6 @@
     padding-left: var(--dl-space-space-unit);
     padding-right: var(--dl-space-space-unit);
     padding-bottom: var(--dl-space-space-twounits);
-  }
-  .contatti-link {
-    text-decoration: underline;
   }
   .contatti-content {
     align-self: flex-start;
